# django-project-template

./: .gitignore  README.md  mk-django-app  pyproject.toml
django_website/: settings.py
