[tool.poetry]
name = "django-project-template"
version = "0.1.0"
description = "Django Website"
authors = ["Eamon Walshe <eamon@walshe.org>"]
license = "CCO or Private"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-types = "^0.20.0"
django-stubs-ext = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
bandit = "^1.8.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
